[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ravshield"
version = "0.1.0"
description = "Open-source defensive cybersecurity engine for threat analysis, reputation intelligence, detection, correlation, and risk scoring."
requires-python = ">=3.11"